--- a/ProyectoEventos/appsettings.json
+++ b/ProyectoEventos/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=NICOLAS\\SQLEXPRESS;Database=Eventos_DB;Integrated Security = true; Trust Server Certificate = true"
+  }
 }
